# backend/swaggerApi.json
@@ -13,12 +13,8 @@
     },
     "servers": [
         {
-            "url": "http://localhost:5002",
+            "url": "http://localhost:5001",
             "description": "Development Environment"
-        },
-        {
-            "url": "https://ic38.herokuapp.com",
-            "description": "Live Environment"
         }
     ],
     "tags": [
@@ -28,62 +24,90 @@
         }
     ],
     "paths": {
-        "/api/movie/create": {
+        "/api/user/signup": {
             "post": {
                 "tags": [
-                    "Movies"
+                    "User"
                 ],
-                "summary": "ADDS A NEW MOVIE",
+                "summary": "Sign Up ",
+                "description": "User SIgnUP",
                 "produces": "application/json",
-                "consumes": "multipart/form-data",
+                "consumes": "application/json",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "multipart/form-data": {
+                        "application/json": {
                             "schema": {
                                 "type": "object",
                                 "properties": {
-                                    "title": {
+                                    "email": {
                                         "type": "string",
-                                        "example": "my Course"
+                                        "example": "abdulmanafp1996@gmail.com"
                                     },
-                                    "description": {
+                                    "password": {
                                         "type": "string",
-                                        "example": "this a course about MERN stack"
+                                        "example": "Pass123"
                                     },
-                                    "release_date": {
+                                    "name": {
                                         "type": "string",
-                                        "example": "fgsdfgsdf"
-                                    },
-                                    "status": {
+                                        "example": "Manaf Abdul"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Verified SuccessFully"
+                    },
+                    "401": {
+                        "description": "Unauthorized access to API"
+                    }
+                }
+            }
+        },
+        "/api/user/signin": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Sign In ",
+                "description": "User SignIn",
+                "produces": "application/json",
+                "consumes": "application/json",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "email": {
                                         "type": "string",
-                                        "example": "dsfgdsfg"
+                                        "example": "abdulmanafp1996@gmail.com"
                                     },
-                                    "rating": {
-                                        "type": "number",
-                                        "example": 3
-                                    },
-                                    "language": {
+                                    "password": {
                                         "type": "string",
-                                        "example": "English"
-                                    },
-                                    "duration": {
-                                        "type": "string",
-                                        "example": "2 hours 30 min"
-                                    },
-                                    "isSeries": {
-                                        "type": "boolean",
-                                        "example": false
-                                    },
-                                    "director": {
-                                        "type": "string",
-                                        "example": "K.K.Rajeev"
-                                    },
-                                    "posterImage": {
-                                        "type": "file"
-                                    },
-                                    "video": {
-                                        "type": "file"
+                                        "example": "Pass123"
                                     }
                                 }
                             }
